--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "coveralls": "^3.1.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
