--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
-language : node_js
-node_js : "stable"
-cache:
-  directories:
-    - node_modules
-install : travis_wait 30 npm install
-script : npm test
-after_script : npm run coverage
+language: node_js
+node_js:
+  - 'stable'
+install: npm install
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database test_ahome;' -U postgres
+script: npm test
+after_success: npm run coverage
