--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ node_js:
 install: npm install
 services:
   - postgresql
+before_script:
+  - psql -c 'create database test_ahome;' -U postgres
 script: npm test
 after_success: npm run coverage
